# RS_9_9_evaluation_selection

./: README.md  pyproject.toml
src/forest_ml/: data.py  eda_report.py  evaluate_performance.py  pipeline.py  train.py
