[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["EvgenVer <evgenyveremiev88@gmail.com>"]
packages = [{include = "forest_ml", from = "./src"}]



[tool.poetry.scripts]
eda_report = "forest_ml.eda_report:eda_report"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^1.25.1"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
profiling = "^0.1.3"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
argparse = "^1.4.0"
click = "^8.1.3"
path = "^16.4.0"
pathlib = "^1.0.1"
sklearn = "^0.0"
joblib = "^1.1.0"
pandas-profiling = "^3.2.0"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
